--- a/C4-L03.qmd
+++ b/C4-L03.qmd
@@ -4,16 +4,14 @@ title: "Normal Dynamic Linear Models, Part 1"
 subtitle: Time Series Analysis
 description: "Normal Dynamic Linear Models (NDLMs) are a class of models used for time series analysis that allow for flexible modeling of temporal dependencies."
 categories: 
-  - Coursera 
-  - notes
   - Bayesian Statistics
-  - Normal Dynamic Linear Models
   - Time Series
 keywords: 
-  - time series
-  - filtering
-  - smoothing
-  - NLDM
+  - Time Series
+  - Filtering
+  - Smoothing
+  - NDLM
+  - Normal Dynamic Linear Models
   - Polynomial Trend Models
   - Regression Models
   - Superposition Principle
@@ -22,8 +20,6 @@ image: course-banner.png
 fig-caption: Notes about ... Bayesian Statistics
 title-block-banner: images/banner_deep.jpg
 ---
-
-
 
 [Normal Dynamic Linear Models (NDLMs) are defined and illustrated in this module using several examples Model building based on the forecast function via the superposition principle is explained. Methods for Bayesian filtering, smoothing and forecasting for NDLMs in the case of known observational variances and known system covariance matrices are discussed and illustrated.]{.mark}.
 
